# OCP

./: .gitmodules  CMakeLists.txt  FindOpenCascade.cmake  LICENSE  OCP_specific.inc  README.md  azure-pipelines.yml  build-bindings-job.yml  dump_symbols.py  env.yml  environment.devenv.yml  ocp.toml  pystreambuf.h  vtk_pybind.h
.github/actions/micromamba/: action.yml
.github/workflows/: bindings.yml  build-job.yml
conda/: .meta.yaml.swp  bld.bat  build.sh  meta.yaml
opencascade/: AIS.hxx  AIS_Animation.hxx  AIS_AnimationAxisRotation.hxx  AIS_AnimationCamera.hxx  AIS_AnimationObject.hxx  AIS_AnimationTimer.hxx  AIS_AttributeFilter.hxx  AIS_Axis.hxx  AIS_BadEdgeFilter.hxx  AIS_BaseAnimationObject.hxx  AIS_C0RegularityFilter.hxx  AIS_CameraFrustum.hxx  AIS_Circle.hxx  AIS_ColorScale.hxx  AIS_ColoredDrawer.hxx  AIS_ColoredShape.hxx  AIS_ConnectedInteractive.hxx  AIS_DisplayMode.hxx  AIS_DisplayStatus.hxx  AIS_DragAction.hxx  AIS_ExclusionFilter.hxx  AIS_GlobalStatus.hxx  AIS_GraphicTool.hxx  AIS_InteractiveContext.hxx  AIS_InteractiveObject.hxx  AIS_KindOfInteractive.hxx  AIS_LightSource.hxx  AIS_Line.hxx  AIS_Manipulator.hxx  AIS_ManipulatorMode.hxx  AIS_ManipulatorOwner.hxx  AIS_MediaPlayer.hxx  AIS_MouseGesture.hxx  AIS_MultipleConnectedInteractive.hxx  AIS_NavigationMode.hxx  AIS_Plane.hxx  AIS_PlaneTrihedron.hxx  AIS_Point.hxx  AIS_PointCloud.hxx  AIS_RotationMode.hxx  (+7207 more)
src/: AIS.cpp  AIS.hxx  AIS_enums.cpp  AIS_pre.cpp  Adaptor2d.cpp  Adaptor2d.hxx  Adaptor2d_enums.cpp  Adaptor2d_pre.cpp  Adaptor3d.cpp  Adaptor3d.hxx  Adaptor3d_enums.cpp  Adaptor3d_pre.cpp  AdvApp2Var.cpp  AdvApp2Var.hxx  AdvApp2Var_enums.cpp  AdvApp2Var_pre.cpp  AdvApprox.cpp  AdvApprox.hxx  AdvApprox_enums.cpp  AdvApprox_pre.cpp  AppBlend.cpp  AppBlend_enums.cpp  AppBlend_pre.cpp  AppCont.cpp  AppCont.hxx  AppCont_enums.cpp  AppCont_pre.cpp  AppDef.cpp  AppDef.hxx  AppDef_enums.cpp  AppDef_pre.cpp  AppParCurves.cpp  AppParCurves.hxx  AppParCurves_enums.cpp  AppParCurves_pre.cpp  AppStd.cpp  AppStd.hxx  AppStdL.cpp  AppStdL_enums.cpp  AppStd_enums.cpp  (+1114 more)
src-linux/: AIS.cpp  AIS_pre.cpp  AIS_tmpl.hxx  Adaptor2d.cpp  Adaptor2d_pre.cpp  Adaptor2d_tmpl.hxx  Adaptor3d.cpp  Adaptor3d_pre.cpp  Adaptor3d_tmpl.hxx  AdvApp2Var.cpp  AdvApp2Var_pre.cpp  AdvApp2Var_tmpl.hxx  AdvApprox.cpp  AdvApprox_pre.cpp  AdvApprox_tmpl.hxx  AppBlend.cpp  AppCont.cpp  AppCont_pre.cpp  AppCont_tmpl.hxx  AppDef.cpp  AppDef_pre.cpp  AppDef_tmpl.hxx  AppParCurves.cpp  AppParCurves_pre.cpp  AppParCurves_tmpl.hxx  AppStd.cpp  AppStdL.cpp  AppStdL_tmpl.hxx  AppStd_pre.cpp  Approx.cpp  Approx_pre.cpp  Approx_tmpl.hxx  Aspect.cpp  Aspect_pre.cpp  Aspect_tmpl.hxx  BOPAlgo.cpp  BOPAlgo_pre.cpp  BOPAlgo_tmpl.hxx  BOPDS.cpp  BOPDS_pre.cpp  (+797 more)
src-macOS/: AIS.cpp  AIS_pre.cpp  AIS_tmpl.hxx  Adaptor2d.cpp  Adaptor2d_pre.cpp  Adaptor2d_tmpl.hxx  Adaptor3d.cpp  Adaptor3d_pre.cpp  Adaptor3d_tmpl.hxx  AdvApp2Var.cpp  AdvApp2Var_pre.cpp  AdvApp2Var_tmpl.hxx  AdvApprox.cpp  AdvApprox_tmpl.hxx  AppBlend_pre.cpp  AppBlend_tmpl.hxx  AppCont.cpp  AppCont_tmpl.hxx  AppDef.cpp  AppDef_pre.cpp  AppDef_tmpl.hxx  AppParCurves.cpp  AppParCurves_pre.cpp  AppParCurves_tmpl.hxx  AppStd.cpp  AppStdL.cpp  AppStdL_pre.cpp  Approx.cpp  Approx_pre.cpp  Approx_tmpl.hxx  Aspect.cpp  Aspect_pre.cpp  Aspect_tmpl.hxx  BOPAlgo.cpp  BOPAlgo_pre.cpp  BOPAlgo_tmpl.hxx  BOPDS.cpp  BOPDS_pre.cpp  BOPDS_tmpl.hxx  BOPTools.cpp  (+771 more)
src-win/: AIS.cpp  AIS_pre.cpp  AIS_tmpl.hxx  Adaptor2d.cpp  Adaptor2d_pre.cpp  Adaptor2d_tmpl.hxx  Adaptor3d.cpp  Adaptor3d_pre.cpp  Adaptor3d_tmpl.hxx  AdvApp2Var.cpp  AdvApp2Var_pre.cpp  AdvApp2Var_tmpl.hxx  AdvApprox.cpp  AdvApprox_pre.cpp  AdvApprox_tmpl.hxx  AppBlend.cpp  AppBlend_pre.cpp  AppBlend_tmpl.hxx  AppCont.cpp  AppCont_pre.cpp  AppCont_tmpl.hxx  AppDef.cpp  AppDef_pre.cpp  AppDef_tmpl.hxx  AppParCurves.cpp  AppParCurves_pre.cpp  AppParCurves_tmpl.hxx  AppStd.cpp  AppStdL.cpp  AppStdL_pre.cpp  AppStdL_tmpl.hxx  AppStd_pre.cpp  AppStd_tmpl.hxx  Approx.cpp  Approx_pre.cpp  Approx_tmpl.hxx  Aspect.cpp  Aspect_pre.cpp  Aspect_tmpl.hxx  BOPAlgo.cpp  (+854 more)
templates/: CMakeLists.j2
